# FM2note

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.zh-CN.md  docker-compose.yaml  help.md  main.py  plan.md  pyproject.toml  requirements.txt  research.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
config/: config.example.yaml  config.yaml  subscriptions.example.yaml  subscriptions.yaml
devdocs/: girlfriend-guide.md
docs/: dashscope-tingwu-api.md
scripts/: benchmark_asr.py  build_macos_app.py  com.fm2note.serve.plist  com.fm2note.serve.plist.template  run-serve.sh
server/: Dockerfile.cache  README.md  __init__.py  cache_sidecar.py  docker-compose.cache.yaml
src/: app_paths.py  config.py  episode_processor.py  macos_launcher.py  macos_service.py  models.py  pipeline.py  scheduler.py  shared_cache.py  transcribe_flow.py
src/downloader/: audio.py
src/monitor/: rss_checker.py  state.py  subtitle.py
src/summarizer/: base.py  factory.py  openai_client.py  pending.py  poe_client.py  prompts.py
src/templates/: podcast_note.md.j2
src/transcriber/: bailian.py  base.py  factory.py  funasr.py  poe.py  tingwu.py  whisper_api.py
templates/: podcast_note.md.j2
tests/: conftest.py  test_balance.py  test_cache_sidecar.py  test_cli.py  test_config.py  test_downloader.py  test_env_writer.py  test_episode_processor.py  test_feed_preview.py  test_funasr.py  test_html_cleaner.py  test_install_shortcut.py  test_logs_and_poll.py  test_macos_launcher.py  test_macos_packaging.py  test_markdown.py  test_markdown_custom.py  test_models.py  test_obsidian.py  test_openai_summarizer.py  test_pending.py  test_pipeline.py  test_poe_summarizer.py  test_poe_transcriber.py  test_progress_bus.py  test_rss_checker.py  test_rss_generic.py  test_scheduler.py  test_shared_cache.py  test_state.py  test_subtitle.py  test_summarizer_factory.py  test_summarizer_prompts.py  test_transcribe_flow.py  test_transcriber.py  test_web_app.py  test_web_cloud.py  test_web_health.py  test_web_history.py  test_web_settings_write.py  (+2 more)
(+46 files in other folders)
