[project]
name = "fm2note"
version = "0.1.0"
description = "小宇宙播客 → Obsidian 笔记自动化管线"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: 集成测试，需要外部服务",
]
