[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fm2note"
dynamic = ["version"]
description = "Podcast RSS → Obsidian notes automation pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Austin"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "click>=8.1",
    "python-dateutil>=2.9",
    "markdownify>=0.13",
    "dashscope>=1.20",
]

[project.optional-dependencies]
whisper = ["openai>=1.0", "pydub>=0.25"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "ruff>=0.8"]

[project.scripts]
fm2note = "main:cli"

[project.urls]
Homepage = "https://github.com/Austin5925/FM2note"
Repository = "https://github.com/Austin5925/FM2note"
Changelog = "https://github.com/Austin5925/FM2note/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Austin5925/FM2note/issues"

[tool.setuptools.dynamic]
version = {attr = "src.version.VERSION"}

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.j2", "*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
]
